--- a/app/src/main/res/layout/activity_sample_fragment.xml
+++ b/app/src/main/res/layout/activity_sample_fragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <fragment
+    android:id="@+id/sample_fragment"
     android:name="com.yayandroid.locationmanager.sample.fragment.SampleFragment"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
